tests/sksl/errors/BreakOutsideLoop.glsl
### Compilation failed:

error: 1: break statement must be inside a loop or switch
1 error
